Removed case submission link

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -26,7 +26,7 @@
 
 </div>
 </div>
-
+<!--
 <div class="row">
 <p>  <%= raw @case.description %></p>
 
@@ -35,5 +35,5 @@
   <%= form.file_field :document %>
   <%= form.submit %>
 <% end %>
-</div>
+</div> -->
 </div>
