Change case comments

--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -26,14 +26,14 @@
 
 </div>
 </div>
-<!--
+
 <div class="row">
 <p>  <%= raw @case.description %></p>
-
+<!--
 <h4> Submit Case</h4>
 <%= form_for(@case, :html => { :multipart => true }) do |form| %>
   <%= form.file_field :document %>
   <%= form.submit %>
-<% end %>
-</div> -->
+<% end %>-->
+</div> 
 </div>
